--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,11 +7,25 @@
     <title>TO DO LIST</title>
 </head>
 <body>
-    <h1><%=day %> List</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita consequuntur tenetur iste neque ratione corporis rerum quae culpa architecto quis quia quaerat, doloremque facere dignissimos. Optio facere dolorum harum minima! </p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci deleniti odit mollitia quidem labore. Dolores enim, odio hic nihil facilis accusamus ipsa optio fugiat minima omnis blanditiis deserunt aperiam in.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt possimus inventore iure reiciendis voluptate enim explicabo sapiente, quaerat ex sunt deserunt placeat harum aut ducimus nulla. Excepturi beatae rerum modi?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae reiciendis enim facilis molestias laboriosam voluptatum dignissimos cumque perferendis pariatur excepturi nemo molestiae rem, explicabo fugiat dolores mollitia, repellendus obcaecati ut?</p>
+    <% if (day === "Saturday" || day === "Sunday") { %>
+    <h1 style="color: #b4149a"><%=day %> ToDo List</h1>
+   <% } else { %>
+        <h1 style="color: #0444a3"><%=day %> ToDo List</h1>
+
+    <% } %>
+
+<ul>
+    <li>Buy Food</li>
+    <li>Cook Food</li>
+    <li>Eat Food</li>
+    <li>Wash Dishes</li>
+    <li><%= newListItem %></li>
+</ul>
+<form action="/" method="post">
+    <label for="newItem">Add new ToDo item</label><br>
+    <input type="text" name="newItem" id=""> 
+    <button type="submit">Submit</button>
+</form>
 </body>
 </html>
 
